pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-prod
  labels:
    app: myapp-prod
    kind: frond-end
spec:
  containers:
    - name: nginx-container
      image: nginx
      commands: ["ls"]
      args: ["-la"]
