volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
 spec:
   containers:
     - image: alpine
       name: alpine
       command: ["/bin/sh", "-c"]
       args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
       volumeMounts: 
       - mountPath: /opt
         name: data-volume 
   volumes:
     - name: data-volum
       hostPath:
         path: /data
         type: Directory
