service-nodeport-definition.yaml
apiVersion: batch/v1
kind: Service
metadata:
  name: myapp-nodeport-service
spec:
  type: NodePort
  ports:
    - targetPorts: 80   # Target POD port
      port: 80          # service's port
      nodePort: 30008   # exposed by the Node
  selector:
    app: myapp
    type: front-end
