ingress-sample-resource-to-myapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  backend:
    serviceName: myapp-service
    servicePort: 80
